refactor install command to separate store and install commands